# ant_colony

./: .clangd  .gitignore  BACKEND_PLAN.md  BENCHMARKS.md  CLAUDE.md  CMakeLists.txt  IMPLEMENTATION_STATUS.md  INTEGRATION_SUMMARY.md  LOCAL_SEARCH_QUICKSTART.md  LOCAL_SEARCH_SUMMARY.md  Makefile  README.md  analyze_results.py  benchmark.sh  benchmark_comprehensive.sh  benchmark_local_search.sh  benchmark_quick.sh  cpu_parallel.md  move_incompatible.sh  test_local_search_web.py
.claude/: settings.local.json
backend/: .gitignore  README.md  app.py  config.py  requirements.txt  solver_manager.py  test_client.py
benchmarking/: .gitignore  README.md  analyze_results.py  quick_test.sh  run_benchmarks.sh
cpp/: CMakeLists.txt
cpp/include/: Ant.h  AntColony.h  City.h  Graph.h  LocalSearch.h  PheromoneMatrix.h  TSPLoader.h  Tour.h
cpp/src/: Ant.cpp  AntColony.cpp  Graph.cpp  LocalSearch.cpp  PheromoneMatrix.cpp  TSPLoader.cpp  main.cpp
cpp/tests/: AntColony_test.cpp  Graph_test.cpp  LocalSearch_test.cpp  PheromoneMatrix_test.cpp  TSPLoader_test.cpp  Tour_test.cpp  example_test.cpp
cpp/tests/data/: test_invalid.txt  test_matrix_4.txt
data/: README.md
frontend/: README.md  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: aco-tsp-dashboard.tsx  city-visualization.tsx  configuration-panel.tsx  path-display.tsx  performance-chart.tsx
frontend/src/hooks/: useSocket.ts
include/: Ant.h  AntColony.h  Graph.h
python_bindings/: .gitignore  README.md  __init__.py  bindings.cpp  setup.py  test_bindings.py
src/: Ant.cpp  AntColony.cpp  City.cpp  Graph.cpp  PheromoneMatrix.cpp  TSPLoader.cpp  Tour.cpp  main.cpp
tests/: Ant_test.cpp  City_test.cpp
tests/data/: test_simple_5.txt  test_triangle_3.txt
to_learn/: 00-overview.md  01-frontend-backend-interaction.md  02-websockets-vs-rest.md  03-typescript-basics.md  04-pybind11-cpp-python.md
uncompatibleData/: README.md
